# crystalgui

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  coding_guidelines.md  compile_flags.txt  contributing.md  license.md  logout.txt  readme.md
cmake/: CrystalGUI.pc.in  cmake_uninstall.cmake.in  subdep.cmake
documentation/: CMakeLists.txt  Doxyfile.in  background.css  footer.html
example/: CMakeLists.txt  control_test_suite.c
include/crystalgui/: crystalgui.h
res/shaders/: blurShader.fs  blurShader.vs  rectangleShader.fs  rectangleShader.vs  shadowShader.fs  shadowShader.vs
resource/fonts/STIX_Two_Text/: OFL.txt  README.txt
resource/shaders/glsl100/: box.fs
resource/shaders/glsl120/: box.fs
resource/shaders/glsl330/: box.fs
script/: cgui_pretty_printers.py
source/: CMakeLists.txt  cg_components.c  cg_core.c  cg_crystalline.c  cg_easings.c  cg_element.c  cg_event.c  cg_extra.c  cg_layout.c  cg_node.c  cg_theme.c  cg_transition.c
src/: Makefile  crystalgui.c  crystalgui.h  markdown_renderer.c  markdown_renderer.h  rllist.h  test  test.c
test/: CMakeLists.txt
